# TetrikaTestTasks

./: README.md  first.py  pyproject.toml  second.py  third.py
