[tool.poetry]
name = "Tetrika"
version = "0.1.0"
description = "test tasks"
authors = ["AdamKhagar <adamhagarov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
